// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Title component create snapshont for Title component with props 1`] = `
<h1
  className="title"
>
  Test title
</h1>
`;

exports[`should render Title component create snapshont for Title component without props 1`] = `
<h1
  className="title"
>
  Simple title
</h1>
`;
